# tak-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: buffered_channel.rs  client.rs  connection.rs  lib.rs  protocol.rs  router.rs  server.rs  tls.rs  tracing.rs
src/protocol/: mod.rs
src/protocol/xml/: mod.rs
src/protocol/xml/fixtures/: 911_alert_start.xml  911_deactive.xml  additional.xml  contact_alert.xml  first_event.xml  general_chat_message.xml
src/router/: command.rs  mod.rs
src/server/: client_conn.rs  mod.rs
tests/: client_server_test.rs
tests/certs/: ca.crt  client_a.crt  client_a.key  client_b.crt  client_b.key  server.crt  server.key
tests/test_client/: mod.rs
