[package]
name = "tak-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow="1.0.75"
thiserror = {  version = "1.0.56" }

tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread", "net", "io-util", "fs", "time"] }
tokio-util = {  version = "0.7.10" , features = ["codec"]}

tokio-rustls = "0.25.0"
rustls-pemfile = "2.0.0"
rcgen = "0.12.0"
x509-parser = "0.15.1"


futures = "0.3.29"
minidom = "0.15.2"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tikv-jemallocator = "0.6.1"
assert_matches = "1.5.0"
